--- a/History.txt
+++ b/History.txt
@@ -1,14 +1,15 @@
-== 0.9.7 / 20121015
+== 0.9.7 / 20121221
   * BROKE THE API.
     ZMQ::Poller#register and ZMQ::Poller#deregister don't take fd argument
-    anynmore. ZMQ::Poller#readables and ZMQ::Poller#writables return pollables
+    anymore. ZMQ::Poller#readables and ZMQ::Poller#writables return pollables
     instead of just fd when pollable is other than ZMQ socket.
     ZMQ::Poller#register now returns nil instead of false when no pollable
     or events to register to are given, which is consistent with rest of api.
+		Thanks to Pawel Pacana for this code contribution.
 
   * Added support in ZMQ::Poller for pollables responding to fileno and socket.
     Standard Ruby Sockets and IOs can be now registered in poller to listen for
-    events.
+    events. Thanks to Pawel Pacana for this code contribution.
 
   * Fixed a bug in ZMQ::Poller#deregister where it would raise exception
     when trying to deregister already closed ZMQ socket. Issue 59.
@@ -17,6 +18,19 @@
     between tests under same context.
 
   * Added continous integration for all supported platforms on Travis-CI.
+		Thanks to Pawel Pacana for this code contribution.
+
+	*	Signed up for codeclimate.com and made some code changes to get a better
+		"grade" from it.
+		
+	*	Modified the library to *always* load the 'ffi' library upon startup. It 
+		used to be conditional for Rubinius. Thanks to brixen for the change.
+		
+	*	There was a little bit of churn on the zmq "monitor" api. Thanks to
+		Nilson Santos F. Jr. for some code to conditionally attach to the
+		appropriate api depending on library version.
+		
+	
 
 == 0.9.6 / 20120808
   * Never released 0.9.5 as a gem. It was available via github only.
