--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,15 @@
+== 1.0.2 / 20130929
+	* Fix for issue #94. Now includes local_path when searching for a libzmq
+	  to load.
+	
+	* Fix for issue #92. Context and Socket finalizers now track the process'
+		PID to handle a special case when forking a process. Thanks to
+		thinkerbot for the issue and a fix. (Spec is disabled on JRuby since
+		it does not support fork().)
+		
+	* Fix a few RSpec deprecation warnings related to expectations on specific
+	  Exception types.
+	
 == 1.0.1 / 20130318
 	* Fix for issue #77 was not included in 1.0.0 release by mistake.
 	
