--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+== 2.0.0 / 20131001
+	* Split out all of the FFI code to its own gem so other projects can use
+		it without the effort of duplication.
+		
+	*	Support new security API that was added to libzmq.
+
 == 1.0.2 / 20130929
 	* Fix for issue #94. Now includes local_path when searching for a libzmq
 	  to load.
