--- a/README.rdoc
+++ b/README.rdoc
@@ -193,7 +193,7 @@ that activity. That DLL also requires that you copy libstdc++-6.dll and libgcc_s
 
 (The MIT License)
 
-Copyright (c) 2013 Chuck Remes
+Copyright (c) 2013-2017 Chuck Remes
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
